test/testdata/functions/builtin/getenv_non_string_error.lox
print getenv(1); // error: expected getenv argument to be a 'string', got 'number'
